--- a/CodecoolMaterialAPI/CodecoolMaterialAPI.csproj
+++ b/CodecoolMaterialAPI/CodecoolMaterialAPI.csproj
@@ -14,6 +14,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DAL\Interfaces\" />
+    <Folder Include="DAL\Repositories\" />
+  </ItemGroup>
+
 	<PropertyGroup>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
