--- a/CodecoolMaterialAPI/appsettings.json
+++ b/CodecoolMaterialAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CodecoolMaterialAPI-5D77D391-4C85-4237-9D5C-8C16C50C13F0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CodecoolMaterialAPI-5D77D391-4C85-4237-9D5C-8C16C50C13F0;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "CodecoolMaterialAPIConnection": "Server=(localdb)\\mssqllocaldb;Database=CodecoolMaterialAPIDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
